# W

./: .env.production  .gitignore  DESIGN.md  README.md  agent.md  compile_errors.txt  icon_preview.html  index.html  inputs.txt  level_preview.html  package-lock.json  package.json  task.md  tauri.key  tauri.key.pub  test.rs  ts_errors.txt  updater  updater.pub
.github/workflows/: ci.yml  tauri-release.yml
scripts/: gen_images.py  generate-nsis-images.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.key  tauri.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lockdown.rs  sticky_overlay.rs  workerw.rs
src/app/: Layout.css  Layout.tsx  routes.tsx
src/features/analytics/: types.ts
src/features/analytics/components/: ActivityHeatmap.css  ActivityHeatmap.tsx  AnalyticsPage.css  AnalyticsPage.tsx  ConsistencyScore.css  ConsistencyScore.tsx  HabitDeepDive.css  HabitDeepDive.tsx  SmartInsightCard.css  SmartInsightCard.tsx  TimelineReview.css  (+1 more)
src/features/auth/: context.tsx
src/features/clock/: types.ts
src/features/freeze/: types.ts
src/features/habits/: types.ts
src/features/lockdown/: types.ts
src/features/strikes/: types.ts
src/features/todos/: types.ts
src/shared/config/: firebase.ts
src/shared/hooks/: useKeyboardShortcuts.ts  useNotifications.ts
src/shared/services/: completionSound.ts  notificationService.ts
src/shared/stores/: userStore.tsx
src/shared/types/: index.ts
src/shared/utils/: dateUtils.test.ts  dateUtils.ts  storageUtils.ts  tauri.ts
(+157 files in other folders)
